--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "date-fns": "^2.30.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "recharts": "^2.8.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "jest": "^29.7.0"
   }
 }
