--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "googleapis": "^128.0.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
