--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.5.2",
     "googleapis": "^128.0.0",
     "next": "13.5.2",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
