--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "googleapis": "^128.0.0",
-    "next": "13.5.2",
+    "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
+    "encoding": "^0.1.13",
     "jest": "^29.7.0"
   }
 }
