--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "recharts": "^2.8.0",
+    "redis": "^4.6.13",
     "swr": "^2.2.5",
     "tailwindcss": "3.3.3"
   },
