--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "autoprefixer": "10.4.16",
     "date-fns": "^2.30.0",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "^14.1.4",
     "googleapis": "^128.0.0",
-    "next": "^13.5.6",
+    "next": "^14.1.4",
     "next-auth": "^4.24.5",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.8.0",
     "redis": "^4.6.13",
     "swr": "^2.2.5",
