--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -8,8 +8,10 @@ click==8.0.3
 colorama==0.4.4
 command-not-found==0.3
 configobj==5.0.6
+contourpy==1.2.0
 cryptography==3.4.8
 cupshelpers==1.0
+cycler==0.12.1
 dbus-python==1.2.18
 decorator==4.4.2
 defer==1.0.6
@@ -17,6 +19,7 @@ distlib==0.3.8
 distro==1.7.0
 distro-info==1.1+ubuntu0.2
 filelock==3.13.1
+fonttools==4.50.0
 fsspec==2024.3.1
 gyp==0.1
 httplib2==0.20.2
@@ -25,6 +28,7 @@ importlib-metadata==4.6.4
 jeepney==0.7.1
 Jinja2==3.1.3
 keyring==23.5.0
+kiwisolver==1.4.5
 language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
@@ -32,6 +36,7 @@ lazr.uri==1.0.6
 louis==3.20.0
 macaroonbakery==1.3.1
 MarkupSafe==2.1.5
+matplotlib==3.8.3
 more-itertools==8.10.0
 mpmath==1.3.0
 netifaces==0.11.0
@@ -51,11 +56,13 @@ nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.0
 olefile==0.46
+onnx==1.16.0
+packaging==24.0
 pep8==1.7.1
 pexpect==4.8.0
 Pillow==9.0.1
 platformdirs==4.2.0
-protobuf==3.12.4
+protobuf==5.26.1
 psutil==5.9.0
 ptyprocess==0.7.0
 pycairo==1.20.1
@@ -84,6 +91,8 @@ systemd-python==234
 terminator==2.1.1
 toml==0.10.2
 torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 triton==2.2.0
 typing_extensions==4.10.0
 ubuntu-drivers-common==0.0.0
