--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "node ./scripts/seedWeight.js"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.17.0",
     "@vercel/kv": "^1.0.1",
     "autoprefixer": "10.4.16",
     "date-fns": "^2.30.0",
@@ -19,6 +20,7 @@
     "googleapis": "^128.0.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
+    "onnxruntime-web": "1.16.0",
     "postcss": "8.4.30",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
@@ -30,7 +32,9 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
+    "copy-webpack-plugin": "^12.0.2",
     "encoding": "^0.1.13",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "node-polyfill-webpack-plugin": "^3.0.0"
   }
 }
